[gd_scene load_steps=6 format=3 uid="uid://b75bdvywq616u"]

[ext_resource type="Script" uid="uid://f4cdskxijhr1" path="res://source/screens/pantConfiguracion/pant_config.gd" id="1_b6voc"]
[ext_resource type="PackedScene" uid="uid://bfaclosrqprfa" path="res://source/componentes/Btn_a_menu_principal.tscn" id="2_ta2h8"]
[ext_resource type="FontFile" uid="uid://b2sjoc032quef" path="res://resources/fonts/Chelsea_Market/ChelseaMarket-Regular.ttf" id="3_rfh70"]
[ext_resource type="Theme" uid="uid://dxkl17rvghnqm" path="res://resources/themes/informal_theme.tres" id="4_30887"]

[sub_resource type="LabelSettings" id="LabelSettings_rfh70"]
font_size = 32

[node name="PantConfig" type="Node2D"]
script = ExtResource("1_b6voc")

[node name="Panel" type="Panel" parent="."]
offset_right = 1283.0
offset_bottom = 725.0

[node name="BtnAMenuPrincipal" parent="Panel" instance=ExtResource("2_ta2h8")]
layout_mode = 0
offset_left = 1060.0
offset_top = 628.0
offset_right = 1219.0
offset_bottom = 673.0
text = "BtnAMenuPrincipal"

[node name="BtnCambiarIdioma" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 554.0
offset_top = 316.0
offset_right = 726.0
offset_bottom = 371.0
theme_override_fonts/font = ExtResource("3_rfh70")
theme_override_font_sizes/font_size = 0
text = "BtnCambiarIdioma"

[node name="LblConfig" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 441.0
offset_top = 116.0
offset_right = 806.0
offset_bottom = 208.0
theme = ExtResource("4_30887")
theme_override_fonts/font = ExtResource("3_rfh70")
theme_override_font_sizes/font_size = 24
text = "LblConfig"
label_settings = SubResource("LabelSettings_rfh70")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LblCambiar" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 373.0
offset_top = 328.0
offset_right = 496.0
offset_bottom = 351.0
theme = ExtResource("4_30887")
text = "LblCambiar"

[node name="BtnGuardar" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 556.0
offset_top = 439.0
offset_right = 725.0
offset_bottom = 489.0
theme = ExtResource("4_30887")
text = "BtnGuardar"

[connection signal="pressed" from="Panel/BtnCambiarIdioma" to="." method="_on_btn_cambiar_idioma_pressed"]
[connection signal="pressed" from="Panel/BtnGuardar" to="." method="_on_btn_guardar_pressed"]
